<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_open_file" android:icon="@drawable/ic_open_file" android:title="@string/action_open_file" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_bookmarks" android:icon="@drawable/ic_bookmark" android:title="@string/title_bookmarks" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_sort" android:title="@string/sort" app:showAsAction="never" />
    <item android:id="@+id/action_new_folder" android:title="@string/new_folder" app:showAsAction="never" />
    <item android:id="@+id/action_show_hidden" android:title="@string/show_hidden_files" android:checkable="true" app:showAsAction="never" />
    <item android:id="@+id/action_go_to_internal" android:title="@string/internal_storage" app:showAsAction="never" />
    <item android:id="@+id/action_go_to_storage" android:title="@string/storage_root" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/settings" app:showAsAction="never" />
</menu>
